fix: Enhance scrollbar styling and behavior in show_results component

--- a/src/components/show_results/show_results.module.css
+++ b/src/components/show_results/show_results.module.css
@@ -4,6 +4,16 @@
     top: 29rem;
     left: 0;
     position: fixed;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+    scrollbar-color: transparent transparent; /* For Firefox */
+}
+.show_results::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+    height: 0px;
     /* z-index: 4; */
 }
 
